[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ArcVisual.gd" type="Script" id=1]
[ext_resource path="res://Edit_icon.png" type="Texture" id=2]

[node name="ArcVisual" type="Line2D"]
points = PoolVector2Array( 128.443, -75.7826 )
width = 2.0
default_color = Color( 1, 0.572549, 0.321569, 1 )
script = ExtResource( 1 )

[node name="Info" type="Node2D" parent="."]

[node name="Weight" type="Label" parent="Info"]
margin_left = 7.0
margin_top = -22.0
margin_right = 26.0
margin_bottom = -8.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="TextureButton" parent="Info"]
margin_left = 19.3466
margin_top = -41.3656
margin_right = 39.3466
margin_bottom = -21.3656
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditPopup" type="WindowDialog" parent="Info"]
visible = true
margin_left = 138.402
margin_top = 8.09605
margin_right = 274.402
margin_bottom = 125.096
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/EditPopup"]
margin_left = 8.4635
margin_top = 8.01808
margin_right = 48.4635
margin_bottom = 22.0181
text = "Weight"

[node name="WeightText" type="LineEdit" parent="Info/EditPopup"]
margin_left = 8.55453
margin_top = 24.8909
margin_right = 122.555
margin_bottom = 48.8909
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveChangesButt" type="Button" parent="Info/EditPopup"]
margin_left = 11.4719
margin_top = 57.1988
margin_right = 122.472
margin_bottom = 77.1988
text = "Save Changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButt" type="Button" parent="Info/EditPopup"]
margin_left = 13.4719
margin_top = 85.8624
margin_right = 124.472
margin_bottom = 105.862
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPos" type="Position2D" parent="Info"]
position = Vector2( 40.0663, -31.1168 )
__meta__ = {
"_gizmo_extents_": 75.8
}

[connection signal="pressed" from="Info/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="Info/EditPopup/SaveChangesButt" to="." method="_on_SaveChangesButt_pressed"]
[connection signal="pressed" from="Info/EditPopup/DeleteButt" to="." method="_on_DeleteButt_pressed"]
